Armatures in In Front mode disappear on linux when no meshes are visible. #112289

Closed
opened 2023-09-12 16:20:50 +02:00 by Alexander Gavrilov · 2 comments

System Information

Operating system: Linux (Fedora 37) with KDE on X11
Graphics card: RTX 3070 Ti, driver 535.54.03

Blender Version
Broken: 4.0 (dd9f196c2e)

Short description of error
Armatures in In Front mode become completely invisible if no meshes are visible in viewport.

For me the issue happened ever since the depth buffer fix for the visual glitches in #111561.
It doesn't happen on my Windows laptop, so it seems to be OS, GPU or driver specific.

Exact steps for others to reproduce the error

  1. Add a single bone armature.
  2. Enable In Front in its properties.
  3. Hide or delete the default cube.
**System Information** Operating system: Linux (Fedora 37) with KDE on X11 Graphics card: RTX 3070 Ti, driver 535.54.03 **Blender Version** Broken: 4.0 (dd9f196c2e2e) **Short description of error** Armatures in In Front mode become completely invisible if no meshes are visible in viewport. For me the issue happened ever since the depth buffer fix for the visual glitches in #111561. It doesn't happen on my Windows laptop, so it seems to be OS, GPU or driver specific. **Exact steps for others to reproduce the error** 1. Add a single bone armature. 2. Enable In Front in its properties. 3. Hide or delete the default cube.
Alexander Gavrilov added the
Type
Report
Priority
Normal
Status
Needs Triage
labels 2023-09-12 16:20:50 +02:00
Iliya Katushenock added the
Interest
Animation & Rigging
Interest
EEVEE & Viewport
labels 2023-09-12 16:24:25 +02:00
Iliya Katushenock added the
Platform
Linux
label 2023-09-12 20:42:02 +02:00
Member

Here on ubuntu 22.04 and nvidia 390...

Without eevee-next or overlay-next:

图片

With overlay-next: (The bone completely disappears, whether or not the cube is present...)

图片

Here on ubuntu 22.04 and nvidia 390... Without eevee-next or overlay-next: ![图片](/attachments/276ca18d-a27a-4023-9b33-6b5b1ec5b9e2) With overlay-next: (The bone completely disappears, whether or not the cube is present...) ![图片](/attachments/699236cf-8150-412a-b09b-05f8c9598dbe)
YimingWu added
Module
EEVEE & Viewport
Status
Confirmed
and removed
Status
Needs Triage
labels 2023-09-13 06:11:48 +02:00
Author
Member

I would hazard a guess on general principles that maybe if there are no non-overlay objects the depth buffer isn't initialised properly and is in an undefined state, and thus its behavior naturally depends on the system environment.

I would hazard a guess on general principles that maybe if there are no non-overlay objects the depth buffer isn't initialised properly and is in an undefined state, and thus its behavior naturally depends on the system environment.
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-09-13 16:35:36 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#112289
No description provided.