Fix #112289: Workbench: Always clear depth_in_front